# graph_to_data

./: .gitignore  Cargo.toml  LICENSE  README.md  detection.js  detection_bg.wasm  graph_to_data_egui-73d98eae99795b58.js  graph_to_data_egui-73d98eae99795b58_bg.wasm  index.html  load_from_bytes.js  load_from_bytes_bg.wasm  sw.js  use_case.mkv  use_case.mov
.github/workflows/: pages.yml  rust.yml
graph_to_data/: Cargo.toml
graph_to_data/examples/: simple_example.rs
graph_to_data/src/: helpers.rs  image_interpolate.rs  lib.rs  line_detection.rs  main.rs  step0_crop.rs  step1_color_extraction.rs  step2_color_filtering.rs  step3_group.rs  step4_stitch.rs  unit_geometry.rs  vertical_components.rs
graph_to_data_egui/: Cargo.toml  index.html
graph_to_data_egui/src/: app.rs  detection.rs  dock.rs  lib.rs  load_from_bytes.rs  main.rs  tab.rs  tab2.rs
graph_to_data_egui/src/tab/: file_picker.rs  image_wrapper.rs  steps.rs
graph_to_data_egui/src/tab2/: axis_settings.rs  crop_settings.rs  file_loading.rs
graph_to_data_egui/src/tasks/: detect.rs  load_from_bytes_task.rs
graph_to_data_egui_lib/: Cargo.toml
graph_to_data_egui_lib/src/: detection.rs  dock.rs  lib.rs  tasks.rs
graph_to_data_egui_lib/src/tab/: axis_settings.rs  crop_settings.rs  file_loading.rs
